bin/parser.output
Terminals unused in grammar

   FUNCTION


语法

    0 $accept: program $end

    1 program: class_defs

    2 class_defs: class_defs class_def
    3           | class_def

    4 class_def: CLASS IDENTIFIER '{' fields '}'
    5          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'
    6          | error IDENTIFIER '{' fields '}'
    7          | CLASS error '{' fields '}'
    8          | CLASS IDENTIFIER error fields '}'
    9          | CLASS IDENTIFIER '{' fields error
   10          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' error '}'

   11 fields: fields_body
   12       | %empty

   13 fields_body: fields_body field
   14            | field

   15 field: var_def
   16      | func_def

   17 var_def: var_without_initializer_def
   18        | var_with_initializer_def

   19 var_without_initializer_def: var_without_initializer ';'

   20 var_with_initializer_def: var_with_initializer ';'

   21 var_without_initializer: type IDENTIFIER

   22 var_with_initializer: var_without_initializer '=' assign_expr

   23 type: INT
   24     | BOOL
   25     | STRING
   26     | VOID
   27     | CLASS IDENTIFIER
   28     | type '[' ']'

   29 func_def: func_normal_def
   30         | func_anonymous_def

   31 func_normal_def: var_without_initializer '=' '(' formals ')' OP_ARROW '{' stmts '}' ';'

   32 func_anonymous_def: type '(' formals ')' OP_ARROW '{' stmts '}'

   33 formals: formals_body
   34        | VOID
   35        | %empty

   36 formals_body: formals_body ',' var_without_initializer
   37             | var_without_initializer

   38 stmts: stmts stmt
   39      | %empty

   40 stmt: var_def
   41     | expr_stmt
   42     | if_stmt
   43     | while_stmt
   44     | for_stmt
   45     | return_stmt
   46     | print_stmt

   47 expr_stmt: expr ';'
   48          | ';'

   49 if_stmt: IF '(' bool_expr ')' '{' stmts '}'
   50        | IF '(' bool_expr ')' '{' stmts '}' ELSE '{' stmts '}'

   51 while_stmt: WHILE '(' bool_expr ')' '{' stmts '}'

   52 for_stmt: FOR '(' assign_list ';' bool_expr ';' assign_list ')' '{' stmts '}'

   53 return_stmt: RETURN ';'
   54            | RETURN VOID ';'
   55            | RETURN expr ';'

   56 print_stmt: PRINT '(' expr ')' ';'

   57 actuals: actuals_body
   58        | %empty

   59 actuals_body: actuals_body ',' expr
   60             | expr

   61 bool_expr: expr

   62 expr: assign_expr

   63 assign_expr: or_expr
   64            | left_expr '=' assign_expr

   65 assign_list: assign_list_body
   66            | %empty

   67 assign_list_body: assign_list_body ',' assign_expr
   68                 | assign_expr

   69 or_expr: and_expr
   70        | or_expr OP_OR and_expr

   71 and_expr: eq_expr
   72         | and_expr OP_AND eq_expr

   73 eq_expr: cmp_expr
   74        | eq_expr OP_EQ cmp_expr
   75        | eq_expr OP_NE cmp_expr

   76 cmp_expr: add_expr
   77         | cmp_expr '<' add_expr
   78         | cmp_expr '>' add_expr
   79         | cmp_expr OP_LE add_expr
   80         | cmp_expr OP_GE add_expr

   81 add_expr: mul_expr
   82         | add_expr '+' mul_expr
   83         | add_expr '-' mul_expr

   84 mul_expr: unary_expr
   85         | mul_expr '*' unary_expr
   86         | mul_expr '/' unary_expr
   87         | mul_expr '%' unary_expr

   88 unary_expr: left_expr
   89           | THIS
   90           | '+' unary_expr
   91           | '-' unary_expr
   92           | '!' unary_expr

   93 left_expr: prim_expr
   94          | left_expr '[' expr ']'
   95          | left_expr '.' IDENTIFIER
   96          | left_expr '.' IDENTIFIER '(' actuals ')'
   97          | left_expr '(' actuals ')'
   98          | func_anonymous_def '(' actuals ')'

   99 prim_expr: IDENTIFIER
  100          | constant
  101          | '(' expr ')'
  102          | READINTEGER '(' ')'
  103          | READLINE '(' ')'
  104          | NEW IDENTIFIER '(' actuals ')'
  105          | NEW type '[' expr ']'

  106 constant: CONSTANT_INT
  107         | CONSTANT_BOOL
  108         | CONSTANT_STRING
  109         | NIL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 92
'%' (37) 87
'(' (40) 31 32 49 50 51 52 56 96 97 98 101 102 103 104
')' (41) 31 32 49 50 51 52 56 96 97 98 101 102 103 104
'*' (42) 85
'+' (43) 82 90
',' (44) 36 59 67
'-' (45) 83 91
'.' (46) 95 96
'/' (47) 86
';' (59) 19 20 31 47 48 52 53 54 55 56
'<' (60) 77
'=' (61) 22 31 64
'>' (62) 78
'[' (91) 28 94 105
']' (93) 28 94 105
'{' (123) 4 5 6 7 9 10 31 32 49 50 51 52
'}' (125) 4 5 6 7 8 10 31 32 49 50 51 52
error (256) 6 7 8 9 10
IDENTIFIER (258) 4 5 6 8 9 10 21 27 95 96 99 104
CONSTANT_BOOL (259) 107
CONSTANT_INT (260) 106
CONSTANT_STRING (261) 108
OP_AND (262) 72
OP_OR (263) 70
OP_LE (264) 79
OP_GE (265) 80
OP_EQ (266) 74
OP_NE (267) 75
OP_ARROW (268) 31 32
BOOL (269) 24
INT (270) 23
STRING (271) 25
FUNCTION (272)
NIL (273) 109
VOID (274) 26 34 54
CLASS (275) 4 5 7 8 9 10 27
EXTENDS (276) 5 10
NEW (277) 104 105
THIS (278) 89
IF (279) 49 50
ELSE (280) 50
FOR (281) 52
WHILE (282) 51
RETURN (283) 53 54 55
PRINT (284) 56
READINTEGER (285) 102
READLINE (286) 103
CLASS_MEMBER (287)
NOELSE (288)


Nonterminals, with rules where they appear

$accept (52)
    左： 0
program (53)
    左： 1, 右： 0
class_defs (54)
    左： 2 3, 右： 1 2
class_def (55)
    左： 4 5 6 7 8 9 10, 右： 2 3
fields (56)
    左： 11 12, 右： 4 5 6 7 8 9
fields_body (57)
    左： 13 14, 右： 11 13
field (58)
    左： 15 16, 右： 13 14
var_def (59)
    左： 17 18, 右： 15 40
var_without_initializer_def (60)
    左： 19, 右： 17
var_with_initializer_def (61)
    左： 20, 右： 18
var_without_initializer (62)
    左： 21, 右： 19 22 31 36 37
var_with_initializer (63)
    左： 22, 右： 20
type (64)
    左： 23 24 25 26 27 28, 右： 21 28 32 105
func_def (65)
    左： 29 30, 右： 16
func_normal_def (66)
    左： 31, 右： 29
func_anonymous_def (67)
    左： 32, 右： 30 98
formals (68)
    左： 33 34 35, 右： 31 32
formals_body (69)
    左： 36 37, 右： 33 36
stmts (70)
    左： 38 39, 右： 31 32 38 49 50 51 52
stmt (71)
    左： 40 41 42 43 44 45 46, 右： 38
expr_stmt (72)
    左： 47 48, 右： 41
if_stmt (73)
    左： 49 50, 右： 42
while_stmt (74)
    左： 51, 右： 43
for_stmt (75)
    左： 52, 右： 44
return_stmt (76)
    左： 53 54 55, 右： 45
print_stmt (77)
    左： 56, 右： 46
actuals (78)
    左： 57 58, 右： 96 97 98 104
actuals_body (79)
    左： 59 60, 右： 57 59
bool_expr (80)
    左： 61, 右： 49 50 51 52
expr (81)
    左： 62, 右： 47 55 56 59 60 61 94 101 105
assign_expr (82)
    左： 63 64, 右： 22 62 64 67 68
assign_list (83)
    左： 65 66, 右： 52
assign_list_body (84)
    左： 67 68, 右： 65 67
or_expr (85)
    左： 69 70, 右： 63 70
and_expr (86)
    左： 71 72, 右： 69 70 72
eq_expr (87)
    左： 73 74 75, 右： 71 72 74 75
cmp_expr (88)
    左： 76 77 78 79 80, 右： 73 74 75 77 78 79 80
add_expr (89)
    左： 81 82 83, 右： 76 77 78 79 80 82 83
mul_expr (90)
    左： 84 85 86 87, 右： 81 82 83 85 86 87
unary_expr (91)
    左： 88 89 90 91 92, 右： 84 85 86 87 90 91 92
left_expr (92)
    左： 93 94 95 96 97 98, 右： 64 88 94 95 96 97
prim_expr (93)
    左： 99 100 101 102 103 104 105, 右： 93
constant (94)
    左： 106 107 108 109, 右： 100


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     转到状态 3
    class_defs  转到状态 4
    class_def   转到状态 5


State 1

    6 class_def: error . IDENTIFIER '{' fields '}'

    IDENTIFIER  shift, and go to state 6


State 2

    4 class_def: CLASS . IDENTIFIER '{' fields '}'
    5          | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'
    7          | CLASS . error '{' fields '}'
    8          | CLASS . IDENTIFIER error fields '}'
    9          | CLASS . IDENTIFIER '{' fields error
   10          | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' error '}'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: class_defs .
    2 class_defs: class_defs . class_def

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class_def  转到状态 10


State 5

    3 class_defs: class_def .

    $default  reduce using rule 3 (class_defs)


State 6

    6 class_def: error IDENTIFIER . '{' fields '}'

    '{'  shift, and go to state 11


State 7

    7 class_def: CLASS error . '{' fields '}'

    '{'  shift, and go to state 12


State 8

    4 class_def: CLASS IDENTIFIER . '{' fields '}'
    5          | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' fields '}'
    8          | CLASS IDENTIFIER . error fields '}'
    9          | CLASS IDENTIFIER . '{' fields error
   10          | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' error '}'

    error    shift, and go to state 13
    EXTENDS  shift, and go to state 14
    '{'      shift, and go to state 15


State 9

    0 $accept: program $end .

    $default  接受


State 10

    2 class_defs: class_defs class_def .

    $default  reduce using rule 2 (class_defs)


State 11

    6 class_def: error IDENTIFIER '{' . fields '}'

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    $default  reduce using rule 12 (fields)

    fields                       转到状态 21
    fields_body                  转到状态 22
    field                        转到状态 23
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 12

    7 class_def: CLASS error '{' . fields '}'

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    $default  reduce using rule 12 (fields)

    fields                       转到状态 33
    fields_body                  转到状态 22
    field                        转到状态 23
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 13

    8 class_def: CLASS IDENTIFIER error . fields '}'

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    $default  reduce using rule 12 (fields)

    fields                       转到状态 34
    fields_body                  转到状态 22
    field                        转到状态 23
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 14

    5 class_def: CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' fields '}'
   10          | CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' error '}'

    IDENTIFIER  shift, and go to state 35


State 15

    4 class_def: CLASS IDENTIFIER '{' . fields '}'
    9          | CLASS IDENTIFIER '{' . fields error

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    $default  reduce using rule 12 (fields)

    fields                       转到状态 36
    fields_body                  转到状态 22
    field                        转到状态 23
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 16

   24 type: BOOL .

    $default  reduce using rule 24 (type)


State 17

   23 type: INT .

    $default  reduce using rule 23 (type)


State 18

   25 type: STRING .

    $default  reduce using rule 25 (type)


State 19

   26 type: VOID .

    $default  reduce using rule 26 (type)


State 20

   27 type: CLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 21

    6 class_def: error IDENTIFIER '{' fields . '}'

    '}'  shift, and go to state 38


State 22

   11 fields: fields_body .
   13 fields_body: fields_body . field

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    $default  reduce using rule 11 (fields)

    field                        转到状态 39
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 23

   14 fields_body: field .

    $default  reduce using rule 14 (fields_body)


State 24

   15 field: var_def .

    $default  reduce using rule 15 (field)


State 25

   17 var_def: var_without_initializer_def .

    $default  reduce using rule 17 (var_def)


State 26

   18 var_def: var_with_initializer_def .

    $default  reduce using rule 18 (var_def)


State 27

   19 var_without_initializer_def: var_without_initializer . ';'
   22 var_with_initializer: var_without_initializer . '=' assign_expr
   31 func_normal_def: var_without_initializer . '=' '(' formals ')' OP_ARROW '{' stmts '}' ';'

    ';'  shift, and go to state 40
    '='  shift, and go to state 41


State 28

   20 var_with_initializer_def: var_with_initializer . ';'

    ';'  shift, and go to state 42


State 29

   21 var_without_initializer: type . IDENTIFIER
   28 type: type . '[' ']'
   32 func_anonymous_def: type . '(' formals ')' OP_ARROW '{' stmts '}'

    IDENTIFIER  shift, and go to state 43
    '('         shift, and go to state 44
    '['         shift, and go to state 45


State 30

   16 field: func_def .

    $default  reduce using rule 16 (field)


State 31

   29 func_def: func_normal_def .

    $default  reduce using rule 29 (func_def)


State 32

   30 func_def: func_anonymous_def .

    $default  reduce using rule 30 (func_def)


State 33

    7 class_def: CLASS error '{' fields . '}'

    '}'  shift, and go to state 46


State 34

    8 class_def: CLASS IDENTIFIER error fields . '}'

    '}'  shift, and go to state 47


State 35

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' fields '}'
   10          | CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' error '}'

    '{'  shift, and go to state 48


State 36

    4 class_def: CLASS IDENTIFIER '{' fields . '}'
    9          | CLASS IDENTIFIER '{' fields . error

    error  shift, and go to state 49
    '}'    shift, and go to state 50


State 37

   27 type: CLASS IDENTIFIER .

    $default  reduce using rule 27 (type)


State 38

    6 class_def: error IDENTIFIER '{' fields '}' .

    $default  reduce using rule 6 (class_def)


State 39

   13 fields_body: fields_body field .

    $default  reduce using rule 13 (fields_body)


State 40

   19 var_without_initializer_def: var_without_initializer ';' .

    $default  reduce using rule 19 (var_without_initializer_def)


State 41

   22 var_with_initializer: var_without_initializer '=' . assign_expr
   31 func_normal_def: var_without_initializer '=' . '(' formals ')' OP_ARROW '{' stmts '}' ';'

    IDENTIFIER       shift, and go to state 51
    CONSTANT_BOOL    shift, and go to state 52
    CONSTANT_INT     shift, and go to state 53
    CONSTANT_STRING  shift, and go to state 54
    BOOL             shift, and go to state 16
    INT              shift, and go to state 17
    STRING           shift, and go to state 18
    NIL              shift, and go to state 55
    VOID             shift, and go to state 19
    CLASS            shift, and go to state 20
    NEW              shift, and go to state 56
    THIS             shift, and go to state 57
    READINTEGER      shift, and go to state 58
    READLINE         shift, and go to state 59
    '('              shift, and go to state 60
    '+'              shift, and go to state 61
    '-'              shift, and go to state 62
    '!'              shift, and go to state 63

    type                转到状态 64
    func_anonymous_def  转到状态 65
    assign_expr         转到状态 66
    or_expr             转到状态 67
    and_expr            转到状态 68
    eq_expr             转到状态 69
    cmp_expr            转到状态 70
    add_expr            转到状态 71
    mul_expr            转到状态 72
    unary_expr          转到状态 73
    left_expr           转到状态 74
    prim_expr           转到状态 75
    constant            转到状态 76


State 42

   20 var_with_initializer_def: var_with_initializer ';' .

    $default  reduce using rule 20 (var_with_initializer_def)


State 43

   21 var_without_initializer: type IDENTIFIER .

    $default  reduce using rule 21 (var_without_initializer)


State 44

   32 func_anonymous_def: type '(' . formals ')' OP_ARROW '{' stmts '}'

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 77
    CLASS   shift, and go to state 20

    $default  reduce using rule 35 (formals)

    var_without_initializer  转到状态 78
    type                     转到状态 79
    formals                  转到状态 80
    formals_body             转到状态 81


State 45

   28 type: type '[' . ']'

    ']'  shift, and go to state 82


State 46

    7 class_def: CLASS error '{' fields '}' .

    $default  reduce using rule 7 (class_def)


State 47

    8 class_def: CLASS IDENTIFIER error fields '}' .

    $default  reduce using rule 8 (class_def)


State 48

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . fields '}'
   10          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . error '}'

    error   shift, and go to state 83
    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CLASS   shift, and go to state 20

    '}'  reduce using rule 12 (fields)

    fields                       转到状态 84
    fields_body                  转到状态 22
    field                        转到状态 23
    var_def                      转到状态 24
    var_without_initializer_def  转到状态 25
    var_with_initializer_def     转到状态 26
    var_without_initializer      转到状态 27
    var_with_initializer         转到状态 28
    type                         转到状态 29
    func_def                     转到状态 30
    func_normal_def              转到状态 31
    func_anonymous_def           转到状态 32


State 49

    9 class_def: CLASS IDENTIFIER '{' fields error .

    $default  reduce using rule 9 (class_def)


State 50

    4 class_def: CLASS IDENTIFIER '{' fields '}' .

    $default  reduce using rule 4 (class_def)


State 51

   99 prim_expr: IDENTIFIER .

    $default  reduce using rule 99 (prim_expr)


State 52

  107 constant: CONSTANT_BOOL .

    $default  reduce using rule 107 (constant)


State 53

  106 constant: CONSTANT_INT .

    $default  reduce using rule 106 (constant)


State 54

  108 constant: CONSTANT_STRING .

    $default  reduce using rule 108 (constant)


State 55

  109 constant: NIL .

    $default  reduce using rule 109 (constant)


State 56

  104 prim_expr: NEW . IDENTIFIER '(' actuals ')'
  105          | NEW . type '[' expr ']'

    IDENTIFIER  shift, and go to state 85
    BOOL        shift, and go to state 16
    INT         shift, and go to state 17
    STRING      shift, and go to state 18
    VOID        shift, and go to state 19
    CLASS       shift, and go to state 20

    type  转到状态 86


State 57

   89 unary_expr: THIS .

    $default  reduce using rule 89 (unary_expr)


State 58

  102 prim_expr: READINTEGER . '(' ')'

    '('  shift, and go to state 87


State 59

  103 prim_expr: READLINE . '(' ')'

    '('  shift, and go to state 88


State 60

   31 func_normal_def: var_without_initializer '=' '(' . formals ')' OP_ARROW '{' stmts '}' ';'
  101 prim_expr: '(' . expr ')'

    IDENTIFIER       shift, and go to state 51
    CONSTANT_BOOL    shift, and go to state 52
    CONSTANT_INT     shift, and go to state 53
    CONSTANT_STRING  shift, and go to state 54
    BOOL             shift, and go to state 16
    INT              shift, and go to state 17
    STRING           shift, and go to state 18
    NIL              shift, and go to state 55
    VOID             shift, and go to state 77
    CLASS            shift, and go to state 20
    NEW              shift, and go to state 56
    THIS             shift, and go to state 57
    READINTEGER      shift, and go to state 58
    READLINE         shift, and go to state 59
    '('              shift, and go to state 89
    '+'              shift, and go to state 61
    '-'              shift, and go to state 62
    '!'              shift, and go to state 63

    $default  reduce using rule 35 (formals)

    var_without_initializer  转到状态 78
    type                     转到状态 29
    func_anonymous_def       转到状态 65
    formals                  转到状态 90
    formals_body             转到状态 81
    expr                     转到状态 91
    assign_expr              转到状态 92
    or_expr                  转到状态 67
    and_expr                 转到状态 68
    eq_expr                  转到状态 69
    cmp_expr                 转到状态 70
    add_expr                 转到状态 71
    mul_expr                 转到状态 72
    unary_expr               转到状态 73
    left_expr                转到状态 74
    prim_expr                转到状态 75
    constant                 转到状态 76


State 61

   90 unary_expr: '+' . unary_expr

    IDENTIFIER       shift, and go to state 51
    CONSTANT_BOOL    shift, and go to state 52
    CONSTANT_INT     shift, and go to state 53
    CONSTANT_STRING  shift, and go to state 54
    BOOL             shift, and go to state 16
    INT              shift, and go to state 17
    STRING           shift, and go to state 18
    NIL              shift, and go to state 55
    VOID             shift, and go to state 19
    CLASS            shift, and go to state 20
    NEW              shift, and go to state 56
    THIS             shift, and go to state 57
    READINTEGER      shift, and go to state 58
    READLINE         shift, and go to state 59
    '('              shift, and go to state 89
    '+'              shift, and go to state 61
    '-'              shift, and go to state 62
    '!'              shift, and go to state 63

    type                转到状态 64
    func_anonymous_def  转到状态 65
    unary_expr          转到状态 93
    left_expr           转到状态 94
    prim_expr           转到状态 75
    constant            转到状态 76


State 62

   91 unary_expr: '-' . unary_expr

    IDENTIFIER       shift, and go to state 51
    CONSTANT_BOOL    shift, and go to state 52
    CONSTANT_INT     shift, and go to state 53
    CONSTANT_STRING  shift, and go to state 54
    BOOL             shift, and go to state 16
    INT              shift, and go to state 17
    STRING           shift, and go to state 18
    NIL              shift, and go to state 55
    VOID             shift, and go to state 19
    CLASS            shift, and go to state 20
    NEW              shift, and go to state 56
    THIS             shift, and go to state 57
    READINTEGER      shift, and go to state 58
    READLINE         shift, and go to state 59
    '('              shift, and go to state 89
    '+'              shift, and go to state 61
    '-'              shift, and go to state 62
    '!'              shift, and go to state 63

    type                转到状态 64
    func_anonymous_def  转到状态 65
    unary_expr          转到状态 95
    left_expr           转到状态 94
    prim_expr           转到状态 75
    constant            转到状态 76


State 63

   92 unary_expr: '!' . unary_expr

    IDENTIFIER       shift, and go to state 51
    CONSTANT_BOOL    shift, and go to state 52
    CONSTANT_INT     shift, and go to state 53
    CONSTANT_STRING  shift, and go to state 54
    BOOL             shift, and go to state 16
    INT              shift, and go to state 17
    STRING           shift, and go to state 18
    NIL              shift, and go to state 55
    VOID             shift, and go to state 19
    CLASS            shift, and go to state 20
    NEW              shift, and go to state 56
    THIS             shift, and go to state 57
    READINTEGER      shift, and go to state 58
    READLINE         shift, and go to state 59
    '('              shift, and go to state 89
    '+'              shift, and go to state 61
    '-'              shift, and go to state 62
    '!'              shift, and go to state 63

    type                转到状态 64
    func_anonymous_def  转到状态 65
    unary_expr          转到状态 96
    left_expr           转到状态 94
    prim_expr           转到状态 75
    constant            转到状态 76


State 64

   28 type: type . '[' ']'
   32 func_anonymous_def: type . '(' formals ')' OP_ARROW '{' stmts '}'

    '('  shift, and go to state 44
    '['  shift, and go to state 45


State 65

   98 left_expr: func_anonymous_def . '(' actuals ')'

    '('  shift, and go to state 97


State 66

   22 var_with_initializer: var_without_initializer '=' assign_expr .

    $default  reduce using rule 22 (var_with_initializer)


State 67

   63 assign_expr: or_expr .
   70 or_expr: or_expr . OP_OR and_expr

    OP_OR  shift, and go to state 98

    $default  reduce using rule 63 (assign_expr)


State 68

   69 or_expr: and_expr .
   72 and_expr: and_expr . OP_AND eq_expr

    OP_AND  shift, and go to state 99

    $default  reduce using rule 69 (or_expr)


State 69

   71 and_expr: eq_expr .
   74 eq_expr: eq_expr . OP_EQ cmp_expr
   75        | eq_expr . OP_NE cmp_expr

    OP_EQ  shift, and go to state 100
    OP_NE  shift, and go to state 101

    $default  reduce using rule 71 (and_expr)


State 70

   73 eq_expr: cmp_expr .
   77 cmp_expr: cmp_expr . '<' add_expr
   78         | cmp_expr . '>' add_expr
   79         | cmp_expr . OP_LE add_expr
   80         | cmp_expr . OP_GE add_expr

    OP_LE  shift, and go to state 102
    OP_GE  shift, and go to state 103
    '<'    shift, and go to state 104
    '>'    shift, and go to state 105

    $default  reduce using rule 73 (eq_expr)


State 71

   76 cmp_expr: add_expr .
   82 add_expr: add_expr . '+' mul_expr
   83         | add_expr . '-' mul_expr

    '+'  shift, and go to state 106
    '-'  shift, and go to state 107

    $default  reduce using rule 76 (cmp_expr)


State 72

   81 add_expr: mul_expr .
   85 mul_expr: mul_expr . '*' unary_expr
   86         | mul_expr . '/' unary_expr
   87         | mul_expr . '%' unary_expr

    '*'  shift, and go to state 108
    '/'  shift, and go to state 109
    '%'  shift, and go to state 110

    $default  reduce using rule 81 (add_expr)


State 73

   84 mul_expr: unary_expr .

    $default  reduce using rule 84 (mul_expr)


State 74
